# BIOSTAT-821-final-project

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
clinical/: __init__.py  labs.py  patients.py
clinical_data_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db/: schema.sql  seed.py
tests/: test_api.py  test_labs.py  test_patients.py
